fixed merge breakages

--- a/www/templates/customMatch.html
+++ b/www/templates/customMatch.html
@@ -187,71 +187,71 @@
             </tr>
         </table> -->
 
-        <div class="row">
-            <div id="1a" class="col col-33 grey" style="margin-top: -4px">0</div>
-            <div class="col col-33 top" style="margin-top: -4px">Round</div>
-            <div id="1b" class="col col-33 grey" style="margin-top: -4px">0</div>
+        <div class="row even">
+            <div id="1a" class="col d col-33 grey" style="margin-top: -8px">0</div>
+            <div class="col d col-33 top" style="margin-top: -8px">Round</div>
+            <div id="1b" class="col d col-33 grey" style="margin-top: -8px">0</div>
         </div>
-        <div class="row">
-            <div ng-click="s1a1()" class="col col-20 blue">+1</div>
-            <div ng-click="s1a5()" class="col col-20 blue">+5</div>
-            <div class="col col-20 bot">1</div>
-            <div ng-click="s1b1()" class="col col-20 blue">+1</div>
-            <div ng-click="s1b5()"class="col col-20 blue">+5</div>
+        <div class="row even">
+            <div ng-click="s1a1()" class="col d col-20 blue">+1</div>
+            <div ng-click="s1a5()" class="col d ml col-20 blue">+5</div>
+            <div class="col d col-20 lm bot">1</div>
+            <div ng-click="s1b1()" class="col d col-20 blue">+1</div>
+            <div ng-click="s1b5()"class="col d ml col-20 blue">+5</div>
         </div>
-        <div class="row empty"></div>
-        <div class="row">
-            <div id="2a" class="col col-33 grey" style="margin-top: -4px">0</div>
-            <div class="col col-33 top" style="margin-top: -4px">Round</div>
-            <div id="2b" class="col col-33 grey" style="margin-top: -4px">0</div>
+        <div class="row even empty"></div>
+        <div class="row even">
+            <div id="2a" class="col d col-33 grey" style="margin-top: -4px">0</div>
+            <div class="col d col-33 top" style="margin-top: -4px">Round</div>
+            <div id="2b" class="col d col-33 grey" style="margin-top: -4px">0</div>
         </div>
-        <div class="row">
-            <div ng-click="s2a1()" class="col col-20 blue">+1</div>
-            <div ng-click="s2a5()" class="col col-20 blue">+5</div>
-            <div class="col col-20 bot">2</div>
-            <div ng-click="s2b1()" class="col col-20 blue">+1</div>
-            <div ng-click="s2b5()"class="col col-20 blue">+5</div>
+        <div class="row even">
+            <div ng-click="s2a1()" class="col d col-20 blue">+1</div>
+            <div ng-click="s2a5()" class="col d ml col-20 blue">+5</div>
+            <div class="col d lm col-20 bot">2</div>
+            <div ng-click="s2b1()" class="col d col-20 blue">+1</div>
+            <div ng-click="s2b5()"class="col d ml col-20 blue">+5</div>
         </div>
-        <div class="row empty"></div>
-        <div class="row">
-            <div id="3a" class="col col-33 grey" style="margin-top: -4px">0</div>
-            <div class="col col-33 top" style="margin-top: -4px">Round</div>
-            <div id="3b" class="col col-33 grey" style="margin-top: -4px">0</div>
+        <div class="row even empty"></div>
+        <div class="row even">
+            <div id="3a" class="col d col-33 grey" style="margin-top: -4px">0</div>
+            <div class="col d col-33 top" style="margin-top: -4px">Round</div>
+            <div id="3b" class="col d col-33 grey" style="margin-top: -4px">0</div>
         </div>
-        <div class="row">
-            <div ng-click="s3a1()" class="col col-20 blue">+1</div>
-            <div ng-click="s3a5()" class="col col-20 blue">+5</div>
-            <div class="col col-20 bot">3</div>
-            <div ng-click="s3b1()" class="col col-20 blue">+1</div>
-            <div ng-click="s3b5()"class="col col-20 blue">+5</div>
+        <div class="row even">
+            <div ng-click="s3a1()" class="col d col-20 blue">+1</div>
+            <div ng-click="s3a5()" class="col d ml col-20 blue">+5</div>
+            <div class="col d lm col-20 bot">3</div>
+            <div ng-click="s3b1()" class="col d col-20 blue">+1</div>
+            <div ng-click="s3b5()"class="col d ml col-20 blue">+5</div>
         </div>
-        <div class="row empty"></div>
-        <div class="row">
-            <div id="4a" class="col col-33 grey" style="margin-top: -4px">0</div>
-            <div class="col col-33 top" style="margin-top: -4px">Round</div>
-            <div id="4b" class="col col-33 grey" style="margin-top: -4px">0</div>
+        <div class="row even empty"></div>
+        <div class="row even">
+            <div id="4a" class="col d col-33 grey" style="margin-top: -4px">0</div>
+            <div class="col d col-33 top" style="margin-top: -4px">Round</div>
+            <div id="4b" class="col d col-33 grey" style="margin-top: -4px">0</div>
         </div>
-        <div class="row">
-            <div ng-click="s4a1()" class="col col-20 blue">+1</div>
-            <div ng-click="s4a5()" class="col col-20 blue">+5</div>
-            <div class="col col-20 bot">4</div>
-            <div ng-click="s4b1()" class="col col-20 blue">+1</div>
-            <div ng-click="s4b5()"class="col col-20 blue">+5</div>
+        <div class="row even">
+            <div ng-click="s4a1()" class="col d col-20 blue">+1</div>
+            <div ng-click="s4a5()" class="col d ml col-20 blue">+5</div>
+            <div class="col d lm col-20 bot">4</div>
+            <div ng-click="s4b1()" class="col d col-20 blue">+1</div>
+            <div ng-click="s4b5()"class="col d ml col-20 blue">+5</div>
         </div>
-        <div class="row empty"></div>
-        <div class="row">
-            <div id="5a" class="col col-33 grey" style="margin-top: -4px">0</div>
-            <div class="col col-33 top" style="margin-top: -4px">Round</div>
-            <div id="5b" class="col col-33 grey" style="margin-top: -4px">0</div>
+        <div class="row even empty"></div>
+        <div class="row even">
+            <div id="5a" class="col d col-33 grey" style="margin-top: -4px">0</div>
+            <div class="col d col-33 top" style="margin-top: -4px">Round</div>
+            <div id="5b" class="col d col-33 grey" style="margin-top: -4px">0</div>
         </div>
-        <div class="row">
-            <div ng-click="s5a1()" class="col col-20 blue">+1</div>
-            <div ng-click="s5a5()" class="col col-20 blue">+5</div>
-            <div class="col col-20 bot">5</div>
-            <div ng-click="s5b1()" class="col col-20 blue">+1</div>
-            <div ng-click="s5b5()"class="col col-20 blue">+5</div>
+        <div class="row even">
+            <div ng-click="s5a1()" class="col d col-20 blue">+1</div>
+            <div ng-click="s5a5()" class="col d ml col-20 blue">+5</div>
+            <div class="col d lm col-20 bot">5</div>
+            <div ng-click="s5b1()" class="col d col-20 blue">+1</div>
+            <div ng-click="s5b5()"class="col d ml col-20 blue">+5</div>
         </div>
-        <div class="row empty"></div>
+        <div class="row even empty"></div>
         
 
         <label class="item item-input" style="margin: 20px 0px">
