--- a/www/templates/myProfile.html
+++ b/www/templates/myProfile.html
@@ -2,7 +2,7 @@
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <form class="list"></form>
         <div id="loading3" style="text-align:center; margin-top: 20px"><img src="../img/ajax-loader.gif"></img></div>
-        <div id="content" style="display:none">
+        <div id="content3" style="display:none">
             <div style="text-align:center;">
                 <img src="img/ftOdfjrzSGWKGZbQoN6y_person-icon.png" width="100%" height="auto">
             </div>
@@ -18,56 +18,56 @@
                 </label>
                 <h2 class="title tabheader">Matches</h2>
                 <div class="row">
-                    <div class="col">Played<br><p id="matchesplayed"></p></div>
-                    <div class="col">Won<br><p id="matcheswon"></p></div>
-                    <div class="col">Lost<br><p id="matcheslost"></p></div>
-                    <div class="col">Ratio<br><p id="matchesratio"></p></div>
+                    <div class="col c">Played<br><p class="bold" id="matchesplayed"></p></div>
+                    <div class="col c">Won<br><p class="bold" id="matcheswon"></p></div>
+                    <div class="col c">Lost<br><p class="bold" id="matcheslost"></p></div>
+                    <div class="col c">Ratio<br><p class="bold" id="matchesratio"></p></div>
                 </div>
 
                 <h2 class="title tabheader">Games</h2>
                 <div class="row">
-                    <div class="col">Played<br><p id="gamesplayed"></p></div>
-                    <div class="col">Won<br><p id="gameswon"></p></div>
-                    <div class="col">Lost<br><p id="gameslost"></p></div>
-                    <div class="col">Ratio<br><p id="gamesratio"></p></div>
+                    <div class="col c">Played<br><p class="bold" id="gamesplayed"></p></div>
+                    <div class="col c">Won<br><p class="bold" id="gameswon"></p></div>
+                    <div class="col c">Lost<br><p class="bold" id="gameslost"></p></div>
+                    <div class="col c">Ratio<br><p class="bold" id="gamesratio"></p></div>
                 </div>
 
                 <h2 class="title tabheader">Points</h2>
                 <div class="row">
-                    <div class="col">Played<br><p id="pointsplayed"></p></div>
-                    <div class="col">Won<br><p id="pointswon"></p></div>
-                    <div class="col">Lost<br><p id="pointslost"></p></div>
-                    <div class="col">Ratio<br><p id="pointsratio"></p></div>
+                    <div class="col c">Played<br><p class="bold" id="pointsplayed"></p></div>
+                    <div class="col c">Won<br><p class="bold" id="pointswon"></p></div>
+                    <div class="col c">Lost<br><p class="bold" id="pointslost"></p></div>
+                    <div class="col c">Ratio<br><p class="bold" id="pointsratio"></p></div>
                 </div>
 
                 <h2 class="title tabheader">Levels</h2>
                 <div class="row">
-                    <div class="col">Initial<br><p id="levelsinitial"></p></div>
-                    <div class="col">12 Months<br><p id="levels12"></p></div>
-                    <div class="col">Season<br><p id="levelsseason"></p></div>
-                    <div class="col">Now<br><p id="levelsnow"></p></div>
+                    <div class="col c">Initial<br><p class="bold" id="levelsinitial"></p></div>
+                    <div class="col c">12 Months<br><p class="bold" id="levels12"></p></div>
+                    <div class="col c">Season<br><p class="bold" id="levelsseason"></p></div>
+                    <div class="col c">Now<br><p class="bold" id="levelsnow"></p></div>
                 </div>
                 <div class="row">
-                    <div class="col">Average (last 4)<br><p id="levelsaverage"></p></div>
-                    <div class="col">Average at (last 4)<br><p id="levelsaverageat"></p></div>
+                    <div class="col c">Average (last 4)<br><p class="bold" id="levelsaverage"></p></div>
+                    <div class="col c">Average at (last 4)<br><p class="bold" id="levelsaverageat"></p></div>
                 </div>
                 <div class="row header">
-                    <div class="col">Highest<br></div>
-                    <div class="col">Lowest<br></div>
+                    <div class="col c">Highest<br></div>
+                    <div class="col c">Lowest<br></div>
                 </div>
                 <div class="row">
-                    <div class="col col-20">Level<br><p id="levelsmax"></p></div>
-                    <div class="col col-30">Date<br><p id="levelsmaxdate"></p></div>
-                    <div class="col col-20">Level<br><p id="levelsmin"></p></div>
-                    <div class="col col-30">Date<br><p id="levelsmindate"></p></div>
+                    <div class="col c col-20">Level<br><p class="bold" id="levelsmax"></p></div>
+                    <div class="col c col-30">Date<br><p class="bold" id="levelsmaxdate"></p></div>
+                    <div class="col c col-20">Level<br><p class="bold" id="levelsmin"></p></div>
+                    <div class="col c col-30">Date<br><p class="bold" id="levelsmindate"></p></div>
                 </div>
 
                 <h2 class="title tabheader">Level Change</h2>
                 <div class="row">
-                    <div class="col">Overall<br><p id="levelchangeoverall"></p></div>
-                    <div class="col">12 Months<br><p id="levelchange12"></p></div>
-                    <div class="col">Season<br><p id="levelchangeseason"></p></div>
-                    <div class="col">Last<br><p id="levelchangelast"></p></div>
+                    <div class="col c">Overall<br><p class="bold" id="levelchangeoverall"></p></div>
+                    <div class="col c">Last 12<br><p class="bold" id="levelchange12"></p></div>
+                    <div class="col c">Season<br><p class="bold" id="levelchangeseason"></p></div>
+                    <div class="col c">Last<br><p class="bold" id="levelchangelast"></p></div>
                 </div>
 
                 <h2 class="title tabheader">Past Fixtures</h2>
