--- a/www/templates/squashLevels.html
+++ b/www/templates/squashLevels.html
@@ -20,7 +20,7 @@
             </a>
             <ion-list>
                 <ion-item ui-sref="squashLevels.login" menu-close="">Login</ion-item>
-                <ion-item ui-sref="squashLevels.teams" menu-close="">Teams</ion-item>
+                <!-- <ion-item ui-sref="squashLevels.teams" menu-close="">Teams</ion-item> -->
                 <ion-item ui-sref="squashLevels.customMatch" menu-close="">Custom Match</ion-item>
                 <ion-item ui-sref="squashLevels.rankings" menu-close="">Rankings</ion-item>
                 <ion-item ui-sref="squashLevels.find" menu-close="">Find</ion-item>
