--- a/www/lib/ionic/css/custom.css
+++ b/www/lib/ionic/css/custom.css
@@ -101,14 +101,46 @@ table.roundScores > tbody > tr > td > input {
 div.topmarg{
 	margin-top: 20px;
 }
-div.row {
+div.even {
 	height: 45px;
 }
-div.row > div.col {
+div.row > div.c {
+	border: 1px solid #ccc;
+	border-radius: 2px;
+	background-color: #fafafa;
+	margin: 1px;
+	font-weight: bold;
+	text-align: center;
+	color: #333;
+}
+div.row > div.c > p {
+	font-weight: normal;
+}
+span.bold {
+	font-size: 16px;
+	font-weight: bold;
+}
+span.green {
+	color: green;
+}
+span.red {
+	color: red;
+}
+.card {
+	color: #333;
+	font-size: 17px;
+}
+div.row > div.col > p.bold {
+	font-weight: bold;
+	color: #387EF5;
+	font-size: 16px;
+	margin-top: 5px;
+}
+div.row > div.d {
 	text-align: center;
 	font-size: 16px;
 	border-radius: 2px;
-	margin: 2px;
+	margin-top: 2px;
 	line-height: 25px;
 }
 div.row > div.grey {
@@ -130,6 +162,13 @@ div.row > div.top {
 div.row > div.bot {
 	margin: -3px;
 	line-height: 15px;
+}
+div.row > div.ml {
+	margin-left: 2px;
+}
+div.row > div.lm {
+	margin-left: -1px;
+	margin-right: -1px;
 }
 div.empty {	
 	height: 30px;
