--- a/www/templates/find.html
+++ b/www/templates/find.html
@@ -1,85 +1,59 @@
 <ion-view title="Find">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
-
-
-	    <div id="form" ><form action="#">
-	        <p>
-	            <label class="searchbar item item-input">
-					<i class="icon ion-search placeholder-icon"></i>
-				  	<input type="search" id="playerid" placeholder="Search">
-				</label>
-	            <button ng-click="onTap()" class="button button-stable smallbutt" id="loadbutton">Search</button>
-	        </p>
-	    </form> </div>
-
-<!-- 	    <form action="action_page.php">
-			First name:<br>
-			<input type="text" name="firstname">
-			<input type="submit">
-		</form> -->
-
+	    <div id="form" >
+	    	<form action="#">
+	        	<p>
+	            	<label class="searchbar item item-input">
+						<i class="icon ion-search placeholder-icon"></i>
+				  		<input type="search" id="playerid" placeholder="Search">
+					</label>
+	            	<button ng-click="onTap()" class="button button-stable smallbutt" id="loadbutton">Search</button>
+	        	</p>
+	    	</form>
+	    </div>
 	    <div id="msg"></div>
 	    <div id="loading1" style="text-align:center; margin-top: 20px"><img src="../img/ajax-loader.gif"></img></div>
-
-	    <!-- <div id="playerlist">
-		    <ion-list>
-	          <ion-item ng-repeat="item in items" ng-click="search(item)">
-	            {{item}}
-	          </ion-item>
-	        </ion-list>
-	    </div> -->
-	    <div id="results">
-    		<!-- <h2 class="title tabheader">Name </h2> -->
+	    <div id="results" style="display: none">
     		<h2 class="title tabheader">Personal Info </h2>
-    			<div class="card">
-					<div class="item item-text-wrap">
-					    <div id="tab-main" style="font-weight:bold"></div>
-					    <div id ="level" style="font-weight:bold"></div>
-			<!--	  	</div>
-				</div>
-
-    		 <h2 class="title tabheader">Rankings </h2> 
-    			<div class="card">
-			        <div class="item item-text-wrap">
-			        	<div id = "tab-ranking">-->
-
- 				  			<div id="club_rank"></div>	
-			           		<div id="club_pos"></div>
-			           		<div id="county_pos"></div>
-			           		<div id="country_pos"></div>
-			        	
-			    	</div>
-				</div>
-<!-- 			<h2 class="title tabheader">Statistics </h2>
-				<div class="card">
-					<div id="tab-stats" class="item item-text-wrap">
-		        		<div id="p_matches"></div>
-				        <div id="p_games"></div>
-				        <div id="p_points"></div>
-		    		</div>
-		    	</div> -->
-
-		    <h2 class="title tabheader">Statistics</h2>
-	            <div class="row">
-	                <div class="col"><p id="p_won" style="color:green"></p></div>
-	                <div class="col"><p id="p_lost" style="color:red"></p></div>
-	                
-	        
-	            </div>
-		    
-			<h2 class="title tabheader">Level History </h2>
-		    	<div class="card">	
-					<div id="line_chart" style="width: 300px; height: 200px"></div>
+			<div class="card">
+				<div class="item item-text-wrap">
+				    <div id="tab-main" style="font-weight:bold"></div>
+				    <div id ="level" style="font-weight:bold"></div>
+			  		<div id="club_rank"></div>
+	           		<div id="club_pos"></div>
+	           		<div id="county_pos"></div>
+	           		<div id="country_pos"></div>
 		    	</div>
-    
+			</div>
+			<h2 class="title tabheader">Statistics</h2>
+            <div class="card">
+            	<div class="row">
+                	<div class="col">
+                		<span class="bold">Won</span>
+                		<div id="m_won"></div>
+                		<div id="g_won"></div>
+                		<div id="p_won"></div>
+                		<br>
+                	</div>
+                	<div class="col">
+                		<span class="bold">Lost</span>
+                		<div id="m_lost"></div>
+                		<div id="g_lost"></div>
+                		<div id="p_lost"></div>
+                		<br>
+                	</div>
+                </div>
+            </div>
+			<h2 class="title tabheader">Level History </h2>
+	    	<div class="card">	
+				<div id="line_chart" style="width: 300px; height: 200px"></div>
+	    	</div>
        		<h2 class="title tabheader"> Matches </h2>
 			<div id="tab-matches">
-			<ion-scroll direction="xy" style="height: 500px">
-    			<table id="dtable" class="display cell-border" width="100%"></table>
-			</ion-scroll>
+				<ion-scroll direction="xy" style="height: 500px">
+    				<table id="dtable" class="display cell-border" width="100%"></table>
+				</ion-scroll>
 			</div>
-
 	    </div>
-
 	</ion-content>
 </ion-view>
