--- a/www/templates/playerProfiles.html
+++ b/www/templates/playerProfiles.html
@@ -1,45 +1,42 @@
-<ion-view title="Match">
+<ion-view title="Player Page">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
     <div id="loading5" style="text-align:center; margin-top: 20px"><img src="../img/ajax-loader.gif"></img></div>
         <div id="results" style="display:none">
-            <h2 class="title tabheader">Name </h2>
+            <h2 class="title tabheader">Personal Info </h2>
                 <div class="card">
                     <div class="item item-text-wrap">
-                        <div id="tab-main"></div>
-                        <div id ="level"></div>
+                        <div id="tab-main" style="font-weight:bold"></div>
+                        <div id ="level" style="font-weight:bold"></div>
+                        <div id="club_rank"></div>  
+                        <div id="club_pos"></div>
+                        <div id="county_pos"></div>
+                        <div id="country_pos"></div>
                     </div>
                 </div>
-
-            <h2 class="title tabheader">Rankings </h2>
+                <h2 class="title tabheader">Statistics</h2>
                 <div class="card">
-                    <div class="item item-text-wrap">
-                        <div id = "tab-ranking">
-                            <p id="club_pos"></p>   
-                            <p id="county_pos"></p>
-                            <p id="country_pos"></p>
-                            <p id="overall_pos"></p>
+                    <div class="row">
+                        <div class="col">
+                            <span class="bold">Won</span>
+                            <div id="m_won"></div>
+                            <div id="g_won"></div>
+                            <div id="p_won"></div>
+                            <br>
+                        </div>
+                        <div class="col">
+                            <span class="bold">Lost</span>
+                            <div id="m_lost"></div>
+                            <div id="g_lost"></div>
+                            <div id="p_lost"></div>
+                            <br>
                         </div>
                     </div>
                 </div>
-            <h2 class="title tabheader">Statistics </h2>
-                <div class="card">
-                    <div id="tab-stats">
-                        <p id="team_name"></p>
-                        <p id="p_matches"></p>
-                        <p id="p_games"></p>
-                        <p id="p_points"></p>
-                        <p id="level_hist"></p>
-                    </div>
-                </div>
-                <div class="card">  
-                    <div id="line_chart" style="width: 300px; height: 200px"></div>
-                </div>
-    
             <h2 class="title tabheader"> Matches </h2>
             <div id="tab-matches">
-            <ion-scroll direction="xy" style="height: 500px">
-                <table id="dtable" class="display cell-border" width="100%"></table>
-            </ion-scroll>
+                <ion-scroll direction="xy" style="height: 500px">
+                    <table id="dtable" class="display cell-border" width="100%"></table>
+                </ion-scroll>
             </div>
         </div>
         <div style="height:30px"></div>
