started work on new charting library

--- a/www/templates/playerProfiles.html
+++ b/www/templates/playerProfiles.html
@@ -32,6 +32,9 @@
                         </div>
                     </div>
                 </div>
+            <div class="card">
+                <canvas id="hist_chart" width="250" height="200"></canvas>
+            </div>
             <h2 class="title tabheader"> Matches </h2>
             <div id="tab-matches">
                 <ion-scroll direction="xy" style="height: 500px">
