--- a/www/templates/playerProfiles.html
+++ b/www/templates/playerProfiles.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
             <div class="card">
-                <canvas id="hist_chart" width="250" height="200"></canvas>
+            <div id="line_chart" style="width: 110%; height: 200px"></div>
             </div>
             <h2 class="title tabheader"> Matches </h2>
             <div id="tab-matches">
