--- a/www/templates/squashLevels.html
+++ b/www/templates/squashLevels.html
@@ -21,9 +21,9 @@
             <ion-list>
                 <ion-item ui-sref="squashLevels.login" menu-close="">Login</ion-item>
                 <!-- <ion-item ui-sref="squashLevels.teams" menu-close="">Teams</ion-item> -->
-                <ion-item ui-sref="squashLevels.customMatch" menu-close="">Custom Match</ion-item>
-                <ion-item ui-sref="squashLevels.rankings" menu-close="">Rankings</ion-item>
                 <ion-item ui-sref="squashLevels.find" menu-close="">Find</ion-item>
+                <ion-item ui-sref="squashLevels.rankings" menu-close="">Rankings</ion-item>
+                <ion-item ui-sref="squashLevels.customMatch" menu-close="">Add a result</ion-item>
                 <ion-item ui-sref="squashLevels.settings" menu-close="">Settings</ion-item>
             </ion-list>
         </ion-content>
