find autocomplete as keys pressed

--- a/www/templates/customMatch.html
+++ b/www/templates/customMatch.html
@@ -189,7 +189,7 @@
 
         <div class="row even">
             <div id="1a" class="col d col-33 grey" style="margin-top: -8px">0</div>
-            <div class="col d col-33 top" style="margin-top: -8px">Round</div>
+            <div class="col d col-33 top" style="margin-top: -8px">Game</div>
             <div id="1b" class="col d col-33 grey" style="margin-top: -8px">0</div>
         </div>
         <div class="row even">
@@ -202,7 +202,7 @@
         <div class="row even empty"></div>
         <div class="row even">
             <div id="2a" class="col d col-33 grey" style="margin-top: -4px">0</div>
-            <div class="col d col-33 top" style="margin-top: -4px">Round</div>
+            <div class="col d col-33 top" style="margin-top: -4px">Game</div>
             <div id="2b" class="col d col-33 grey" style="margin-top: -4px">0</div>
         </div>
         <div class="row even">
@@ -215,7 +215,7 @@
         <div class="row even empty"></div>
         <div class="row even">
             <div id="3a" class="col d col-33 grey" style="margin-top: -4px">0</div>
-            <div class="col d col-33 top" style="margin-top: -4px">Round</div>
+            <div class="col d col-33 top" style="margin-top: -4px">Game</div>
             <div id="3b" class="col d col-33 grey" style="margin-top: -4px">0</div>
         </div>
         <div class="row even">
@@ -228,7 +228,7 @@
         <div class="row even empty"></div>
         <div class="row even">
             <div id="4a" class="col d col-33 grey" style="margin-top: -4px">0</div>
-            <div class="col d col-33 top" style="margin-top: -4px">Round</div>
+            <div class="col d col-33 top" style="margin-top: -4px">Game</div>
             <div id="4b" class="col d col-33 grey" style="margin-top: -4px">0</div>
         </div>
         <div class="row even">
@@ -241,7 +241,7 @@
         <div class="row even empty"></div>
         <div class="row even">
             <div id="5a" class="col d col-33 grey" style="margin-top: -4px">0</div>
-            <div class="col d col-33 top" style="margin-top: -4px">Round</div>
+            <div class="col d col-33 top" style="margin-top: -4px">Game</div>
             <div id="5b" class="col d col-33 grey" style="margin-top: -4px">0</div>
         </div>
         <div class="row even">
