--- a/www/templates/find.html
+++ b/www/templates/find.html
@@ -5,7 +5,7 @@
 	        	<p>
 	            	<label class="searchbar item item-input">
 						<i class="icon ion-search placeholder-icon"></i>
-				  		<input type="search" id="playerid" placeholder="Search">
+				  		<input type="search" id="char_press" placeholder="Search">
 					</label>
 	            	<button ng-click="onTap()" class="button button-stable smallbutt" id="loadbutton">Search</button>
 	        	</p>
