--- a/www/templates/myProfile.html
+++ b/www/templates/myProfile.html
@@ -70,7 +70,7 @@
                     <div class="col c">Last<br><p class="bold" id="levelchangelast"></p></div>
                 </div>
 
-                <h2 class="title tabheader">Past Fixtures</h2>
+                <h2 class="title tabheader">Match History</h2>
                 <div id="matchList">
                     <ion-list>
                       <ion-item ng-repeat="match in matches" ng-click="load(match.index)" style="color:{{match.color}}">
