--- a/www/templates/playerProfiles.html
+++ b/www/templates/playerProfiles.html
@@ -13,7 +13,7 @@
                         <div id="country_pos"></div>
                     </div>
                 </div>
-                <h2 class="title tabheader">Statistics</h2>
+                <h2 class="title tabheader">Statistics (Last 10 matches)</h2>
                 <div class="card">
                     <div class="row">
                         <div class="col">
