--- a/www/templates/customMatch.html
+++ b/www/templates/customMatch.html
@@ -65,7 +65,7 @@
                 <td colspan="2"><input type="number" name="score" placeholder="0" ng-model="scores.score22" ng-change="score2Change()"></td>
             </tr>
             <tr>
-                
+
                     <td>
                         <button id="2a1" class="button button-positive lesspad">
                             +1
@@ -97,7 +97,7 @@
                 <td colspan="2"><input type="number" name="score" placeholder="0" ng-model="scores.score32" ng-change="score3Change()"></td>
             </tr>
             <tr>
-                
+
                     <td>
                         <button id="3a1" class="button button-positive lesspad">
                             +1
@@ -129,7 +129,7 @@
                 <td colspan="2"><input type="number" name="score" placeholder="0" ng-model="scores.score42" ng-change="score4Change()"></td>
             </tr>
             <tr>
-                
+
                     <td>
                         <button id="4a1" class="button button-positive lesspad">
                             +1
@@ -161,7 +161,7 @@
                 <td colspan="2"><input type="number" name="score" placeholder="0" ng-model="scores.score52" ng-change="score5Change()"></td>
             </tr>
             <tr>
-                
+
                     <td>
                         <button id="5a1" class="button button-positive lesspad">
                             +1
@@ -188,71 +188,72 @@
         </table> -->
 
         <div class="row even">
-            <div id="1a" class="col d col-33 grey" style="margin-top: -8px">0</div>
+            <input id="1a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
             <div class="col d col-33 top" style="margin-top: -8px">Game</div>
-            <div id="1b" class="col d col-33 grey" style="margin-top: -8px">0</div>
+            <input id="1b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
         </div>
         <div class="row even">
-            <div ng-click="s1a1()" class="col d col-20 blue">+1</div>
-            <div ng-click="s1a5()" class="col d ml col-20 blue">+5</div>
+            <div ng-click="scoreBtnCallback('1a', -1)" class="col d col-20 blue">-1</div>
+            <div ng-click="scoreBtnCallback('1a', +1)" class="col d ml col-20 blue">+1</div>
             <div class="col d col-20 lm bot">1</div>
-            <div ng-click="s1b1()" class="col d col-20 blue">+1</div>
-            <div ng-click="s1b5()"class="col d ml col-20 blue">+5</div>
+            <div ng-click="scoreBtnCallback('1b', -1)" class="col d col-20 blue">-1</div>
+            <div ng-click="scoreBtnCallback('1b', +1)"class="col d ml col-20 blue">+1</div>
         </div>
         <div class="row even empty"></div>
         <div class="row even">
-            <div id="2a" class="col d col-33 grey" style="margin-top: -4px">0</div>
+            <input id="2a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
             <div class="col d col-33 top" style="margin-top: -4px">Game</div>
-            <div id="2b" class="col d col-33 grey" style="margin-top: -4px">0</div>
+            <input id="2b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
+
         </div>
         <div class="row even">
-            <div ng-click="s2a1()" class="col d col-20 blue">+1</div>
-            <div ng-click="s2a5()" class="col d ml col-20 blue">+5</div>
+            <div ng-click="scoreBtnCallback('2a', -1)" class="col d col-20 blue">-1</div>
+            <div ng-click="scoreBtnCallback('2a', +1)" class="col d ml col-20 blue">+1</div>
             <div class="col d lm col-20 bot">2</div>
-            <div ng-click="s2b1()" class="col d col-20 blue">+1</div>
-            <div ng-click="s2b5()"class="col d ml col-20 blue">+5</div>
+            <div ng-click="scoreBtnCallback('2b', -1)" class="col d col-20 blue">-1</div>
+            <div ng-click="scoreBtnCallback('2b', +1)"class="col d ml col-20 blue">+1</div>
         </div>
         <div class="row even empty"></div>
         <div class="row even">
-            <div id="3a" class="col d col-33 grey" style="margin-top: -4px">0</div>
+            <input id="3a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
             <div class="col d col-33 top" style="margin-top: -4px">Game</div>
-            <div id="3b" class="col d col-33 grey" style="margin-top: -4px">0</div>
+            <input id="1b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
         </div>
         <div class="row even">
-            <div ng-click="s3a1()" class="col d col-20 blue">+1</div>
-            <div ng-click="s3a5()" class="col d ml col-20 blue">+5</div>
+            <div ng-click="scoreBtnCallback('3a', -1)" class="col d col-20 blue">-1</div>
+            <div ng-click="scoreBtnCallback('3a', +1)" class="col d ml col-20 blue">+1</div>
             <div class="col d lm col-20 bot">3</div>
-            <div ng-click="s3b1()" class="col d col-20 blue">+1</div>
-            <div ng-click="s3b5()"class="col d ml col-20 blue">+5</div>
+            <div ng-click="scoreBtnCallback('3b', -1)" class="col d col-20 blue">-1</div>
+            <div ng-click="scoreBtnCallback('3b', +1)"class="col d ml col-20 blue">+1</div>
         </div>
         <div class="row even empty"></div>
         <div class="row even">
-            <div id="4a" class="col d col-33 grey" style="margin-top: -4px">0</div>
+            <input id="4a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
             <div class="col d col-33 top" style="margin-top: -4px">Game</div>
-            <div id="4b" class="col d col-33 grey" style="margin-top: -4px">0</div>
+            <input id="4b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
         </div>
         <div class="row even">
-            <div ng-click="s4a1()" class="col d col-20 blue">+1</div>
-            <div ng-click="s4a5()" class="col d ml col-20 blue">+5</div>
+            <div ng-click="scoreBtnCallback('4a', -1)" class="col d col-20 blue">-1</div>
+            <div ng-click="scoreBtnCallback('4a', +1)" class="col d ml col-20 blue">+1</div>
             <div class="col d lm col-20 bot">4</div>
-            <div ng-click="s4b1()" class="col d col-20 blue">+1</div>
-            <div ng-click="s4b5()"class="col d ml col-20 blue">+5</div>
+            <div ng-click="scoreBtnCallback('4b', -1)" class="col d col-20 blue">-1</div>
+            <div ng-click="scoreBtnCallback('4b', +1)"class="col d ml col-20 blue">+1</div>
         </div>
         <div class="row even empty"></div>
         <div class="row even">
-            <div id="5a" class="col d col-33 grey" style="margin-top: -4px">0</div>
+            <input id="5a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
             <div class="col d col-33 top" style="margin-top: -4px">Game</div>
-            <div id="5b" class="col d col-33 grey" style="margin-top: -4px">0</div>
+            <input id="5b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
         </div>
         <div class="row even">
-            <div ng-click="s5a1()" class="col d col-20 blue">+1</div>
-            <div ng-click="s5a5()" class="col d ml col-20 blue">+5</div>
+            <div ng-click="scoreBtnCallback('5a', -1)" class="col d col-20 blue">-1</div>
+            <div ng-click="scoreBtnCallback('5a', +1)" class="col d ml col-20 blue">+1</div>
             <div class="col d lm col-20 bot">5</div>
-            <div ng-click="s5b1()" class="col d col-20 blue">+1</div>
-            <div ng-click="s5b5()"class="col d ml col-20 blue">+5</div>
+            <div ng-click="scoreBtnCallback('5b', -1)" class="col d col-20 blue">-1</div>
+            <div ng-click="scoreBtnCallback('5b', +1)"class="col d ml col-20 blue">+1</div>
         </div>
         <div class="row even empty"></div>
-        
+
 
         <label class="item item-input" style="margin: 20px 0px">
             <span class="input-label">Date</span>
