sorted login and logout to work consistantly, and hide login tab in the side menu when logged in. Also made find page link to player profile page

--- a/www/templates/squashLevels.html
+++ b/www/templates/squashLevels.html
@@ -19,7 +19,7 @@
                 </div>
             </a>
             <ion-list>
-                <ion-item ui-sref="squashLevels.login" menu-close="">Login</ion-item>
+                <ion-item ui-sref="squashLevels.login" menu-close="" id='menulogin'>Login</ion-item>
                 <!-- <ion-item ui-sref="squashLevels.teams" menu-close="">Teams</ion-item> -->
                 <ion-item ui-sref="squashLevels.find" menu-close="">Find</ion-item>
                 <ion-item ui-sref="squashLevels.rankings" menu-close="">Rankings</ion-item>
