--- a/www/templates/find.html
+++ b/www/templates/find.html
@@ -12,7 +12,7 @@
 	    	</form>
 	    </div>
 	    <div id="msg"></div>
-	    <div id="loading1" style="text-align:center; margin-top: 20px;"><img src="../img/ajax-loader.gif"></img></div>
+	    <!-- <div id="loading1" style="text-align:center; margin-top: 20px;"><img src="../img/ajax-loader.gif"></img></div>
 	    <div id="results" style="display: none">
     		<h2 class="title tabheader">Personal Info </h2>
 			<div class="card">
@@ -54,6 +54,6 @@
     				<table id="dtable" class="display cell-border" width="100%"></table>
 				</ion-scroll>
 			</div>
-	    </div>
+	    </div> -->
 	</ion-content>
 </ion-view>
