--- a/www/templates/playerProfiles.html
+++ b/www/templates/playerProfiles.html
@@ -1,6 +1,7 @@
 <ion-view title="Player Page">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
     <div id="loading5" style="text-align:center; margin-top: 20px"><img src="../img/ajax-loader.gif"></img></div>
+        <div id="msg"></div>
         <div id="results" style="display:none">
             <h2 class="title tabheader">Personal Info </h2>
                 <div class="card">
