fixed chart bug, changed player match hist

--- a/www/templates/matchData.html
+++ b/www/templates/matchData.html
@@ -15,6 +15,8 @@
             <div class="row">
                 <div class="col c">Before<br><p id="levelbefore"></p></div>
                 <div class="col c">After<br><p id="levelafter"></p></div>
+                <div class="col c">Change<br><p id="levelchange"></p></div>
+
                 <div class="col c">Before<br><p id="positionbefore"></p></div>
                 <div class="col c">After<br><p id="positionafter"></p></div>
             </div>
@@ -29,6 +31,9 @@
             <div class="row">
                 <div class="col c">Before<br><p id="opplevelbefore"></p></div>
                 <div class="col c">After<br><p id="opplevelafter"></p></div>
+                <div class="col c">Change<br><p id="opplevelchange"></p></div>
+
+
                 <div class="col c">Before<br><p id="opppositionbefore"></p></div>
                 <div class="col c">After<br><p id="opppositionafter"></p></div>
             </div>
