--- a/www/templates/find.html
+++ b/www/templates/find.html
@@ -7,53 +7,14 @@
 						<i class="icon ion-search placeholder-icon"></i>
 				  		<input type="search" id="char_press" placeholder="Search">
 					</label>
-	            	<button ng-click="onTap()" class="button button-stable smallbutt" id="loadbutton">Search</button>
-	        	</p>
-	    	</form>
-	    </div>
-	    <div id="msg"></div>
-	    <div id="loading1" style="text-align:center; margin-top: 20px;"><img src="../img/ajax-loader.gif"></img></div>
-	    <div id="results" style="display: none">
-    		<h2 class="title tabheader">Personal Info </h2>
-			<div class="card">
-				<div class="item item-text-wrap">
-				    <div id="tab-main" style="font-weight:bold"></div>
-				    <div id ="level" style="font-weight:bold"></div>
-			  		<div id="club_rank"></div>
-	           		<div id="club_pos"></div>
-	           		<div id="county_pos"></div>
-	           		<div id="country_pos"></div>
-		    	</div>
-			</div>
-			<h2 class="title tabheader">Statistics</h2>
-            <div class="card">
-            	<div class="row">
-                	<div class="col">
-                		<span class="bold">Won</span>
-                		<div id="m_won"></div>
-                		<div id="g_won"></div>
-                		<div id="p_won"></div>
-                		<br>
-                	</div>
-                	<div class="col">
-                		<span class="bold">Lost</span>
-                		<div id="m_lost"></div>
-                		<div id="g_lost"></div>
-                		<div id="p_lost"></div>
-                		<br>
-                	</div>
-                </div>
-            </div>
-			<h2 class="title tabheader">Level History </h2>
-	    	<div class="card">	
-				<div id="line_chart" style="width: 300px; height: 200px"></div>
-	    	</div>
-       		<h2 class="title tabheader"> Matches </h2>
-			<div id="tab-matches">
-				<ion-scroll direction="xy" style="height: 500px">
-    				<table id="dtable" class="display cell-border" width="100%"></table>
-				</ion-scroll>
-			</div>
+	            	<ion-item ng-click="tapped(player.id)" class="button button-stable smallbutt" id="loadbutton">Search
+                        {{player.name}}
+                    </ion-item>
+                    <!-- <ion-item class="button button-stable smallbutt" ng-click="tapped(player.id)"> -->
+                        <!-- {{player.name}} -->
+                    <!-- </ion-item> -->
+                </p>
+            </form>
 	    </div>
 	</ion-content>
 </ion-view>
