--- a/www/templates/myProfile.html
+++ b/www/templates/myProfile.html
@@ -6,79 +6,48 @@
             <div style="text-align:center;">
                 <img src="img/ftOdfjrzSGWKGZbQoN6y_person-icon.png" width="100%" height="auto">
             </div>
-            <form class="list">
-                <label class="item item-input">
-                    <span class="input-label">Name</span><textarea readonly id="playerName" class="profileItem" placeholder=""></textarea>
-                </label>
-                <label class="item item-input">
-                    <span class="input-label">Email</span><textarea readonly id="playerEmail" class="profileItem" placeholder=""></textarea>
-                </label>
-                <label class="item item-input">
-                    <span class="input-label">Position</span><textarea readonly id="playerPosition" class="profileItem" placeholder=""></textarea>
-                </label>
-                <h2 class="title tabheader">Matches</h2>
-                <div class="row">
-                    <div class="col c">Played<br><p class="bold" id="matchesplayed"></p></div>
-                    <div class="col c">Won<br><p class="bold" id="matcheswon"></p></div>
-                    <div class="col c">Lost<br><p class="bold" id="matcheslost"></p></div>
-                    <div class="col c">Ratio<br><p class="bold" id="matchesratio"></p></div>
+            <h2 class="title tabheader">Personal Info </h2>
+                <div class="card">
+                    <div class="item item-text-wrap">
+                        <div id="tab-main" style="font-weight:bold"></div>
+                        <div id="player_email" style="font-weight:bold"></div>
+                        <div id ="level" style="font-weight:bold"></div>
+                        <div id="club_rank"></div>  
+                        <div id="club_pos"></div>
+                        <div id="county_pos"></div>
+                        <div id="country_pos"></div>
+                    </div>
                 </div>
-
-                <h2 class="title tabheader">Games</h2>
-                <div class="row">
-                    <div class="col c">Played<br><p class="bold" id="gamesplayed"></p></div>
-                    <div class="col c">Won<br><p class="bold" id="gameswon"></p></div>
-                    <div class="col c">Lost<br><p class="bold" id="gameslost"></p></div>
-                    <div class="col c">Ratio<br><p class="bold" id="gamesratio"></p></div>
+                <h2 class="title tabheader">Statistics (Last 10 matches)</h2>
+                <div class="card">
+                    <div class="row">
+                        <div class="col">
+                            <span class="bold">Won</span>
+                            <div id="m_won"></div>
+                            <div id="g_won"></div>
+                            <div id="p_won"></div>
+                            <br>
+                        </div>
+                        <div class="col">
+                            <span class="bold">Lost</span>
+                            <div id="m_lost"></div>
+                            <div id="g_lost"></div>
+                            <div id="p_lost"></div>
+                            <br>
+                        </div>
+                    </div>
                 </div>
-
-                <h2 class="title tabheader">Points</h2>
-                <div class="row">
-                    <div class="col c">Played<br><p class="bold" id="pointsplayed"></p></div>
-                    <div class="col c">Won<br><p class="bold" id="pointswon"></p></div>
-                    <div class="col c">Lost<br><p class="bold" id="pointslost"></p></div>
-                    <div class="col c">Ratio<br><p class="bold" id="pointsratio"></p></div>
-                </div>
-
-                <h2 class="title tabheader">Levels</h2>
-                <div class="row">
-                    <div class="col c">Initial<br><p class="bold" id="levelsinitial"></p></div>
-                    <div class="col c">12 Months<br><p class="bold" id="levels12"></p></div>
-                    <div class="col c">Season<br><p class="bold" id="levelsseason"></p></div>
-                    <div class="col c">Now<br><p class="bold" id="levelsnow"></p></div>
-                </div>
-                <div class="row">
-                    <div class="col c">Average (last 4)<br><p class="bold" id="levelsaverage"></p></div>
-                    <div class="col c">Average at (last 4)<br><p class="bold" id="levelsaverageat"></p></div>
-                </div>
-                <div class="row header">
-                    <div class="col c">Highest<br></div>
-                    <div class="col c">Lowest<br></div>
-                </div>
-                <div class="row">
-                    <div class="col c col-20">Level<br><p class="bold" id="levelsmax"></p></div>
-                    <div class="col c col-30">Date<br><p class="bold" id="levelsmaxdate"></p></div>
-                    <div class="col c col-20">Level<br><p class="bold" id="levelsmin"></p></div>
-                    <div class="col c col-30">Date<br><p class="bold" id="levelsmindate"></p></div>
-                </div>
-
-                <h2 class="title tabheader">Level Change</h2>
-                <div class="row">
-                    <div class="col c">Overall<br><p class="bold" id="levelchangeoverall"></p></div>
-                    <div class="col c">Last 12<br><p class="bold" id="levelchange12"></p></div>
-                    <div class="col c">Season<br><p class="bold" id="levelchangeseason"></p></div>
-                    <div class="col c">Last<br><p class="bold" id="levelchangelast"></p></div>
-                </div>
-
-                <h2 class="title tabheader">Match History</h2>
-                <div id="matchList">
-                    <ion-list>
-                      <ion-item ng-repeat="match in matches" ng-click="load(match.index)" style="color:{{match.color}}">
-                        {{match.name}}
-                      </ion-item>
-                    </ion-list>
-                </div>
-            </form>
+            <div class="card">
+            <div id="line_chart" style="width: 110%; height: 200px"></div>
+            </div>
+            <h2 class="title tabheader"> Matches </h2>
+            <div id="tab-matches">
+                <ion-list>
+                        <ion-item ng-repeat="match in matches" ng-click="load(match.index)" style="color:{{match.color}}">
+                            {{match.name}}<div style='float:right'>{{match.score}}</div>
+                        </ion-item>
+                </ion-list>
+            </div>
         </div>
     </ion-content>
 </ion-view>
