html code cleanup

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -3,17 +3,12 @@
         <ion-list></ion-list>
         <ion-list>
             <div class="centered">
-                <button class="button button-positive" ng-click="clearCache()">
-                  Clear Cache
-                </button>
+                <button class="button button-positive" ng-click="clearCache()">Clear Cache</button>
             </div>
             <div class="centered">
-                <button class="button button-positive" ng-click="logout()">
-                  Logout
-                </button>
+                <button class="button button-positive" ng-click="logout()">Logout</button>
             </div>
             <div id="message" class="centered" style="font-size: 24px"></div>
-
         </ion-list>
     </ion-content>
 </ion-view>
