code clean up and bug fixing

--- a/www/templates/find.html
+++ b/www/templates/find.html
@@ -5,14 +5,9 @@
 	        	<p>
 	            	<label class="searchbar item item-input">
 						<i class="icon ion-search placeholder-icon"></i>
-				  		<input type="search" id="char_press" placeholder="Search">
+				  		<input type="search" id="charpress" placeholder="Search">
 					</label>
-	            	<ion-item ng-click="tapped(player.id)" class="button button-stable smallbutt" id="loadbutton">Search
-                        {{player.name}}
-                    </ion-item>
-                    <!-- <ion-item class="button button-stable smallbutt" ng-click="tapped(player.id)"> -->
-                        <!-- {{player.name}} -->
-                    <!-- </ion-item> -->
+	            	<ion-item ng-click="tapped()" class="button button-stable smallbutt" id="loadbutton">Search</ion-item>
                 </p>
             </form>
 	    </div>
