--- a/www/templates/customMatch.html
+++ b/www/templates/customMatch.html
@@ -1,196 +1,33 @@
 <ion-view title="Add a Result">
     <ion-nav-buttons side="right">
-      <!-- <button class="button doubles" ng-click="toggleDoubles()">Doubles</button> -->
       <button class="button doubles" ng-click="toggleDoubles()" style="display: none">Singles</button>
     </ion-nav-buttons>
     <ion-content overflow-scroll="true" padding="true" class="has-header">
+        
         <table class="customMatch">
-            <!-- <tr>
-                <td style="text-align: left; width: 45%">Artoliminuni vertagibuski</td>
-                <td style="text-align: center; width: 10%">VS</td>
-                <td style="text-align: right; width: 45%">Torftyests Ssdsivill</td>
-            </tr> -->
-            <tr><td colspan="3"><input class="nameInput" type="text" name="fname" placeholder="Player 1" id="name1"></td></tr>
-            <tr class="doubles" style="display: none"><td colspan="3"><input class="nameInput" type="text" name="fname" placeholder="Player 3" id="name3"></td></tr>
+            <tr>
+                <td colspan="3"><input class="nameInput" type="text" name="fname" placeholder="Player 1" id="name1"></td>
+            </tr>
+            <tr class="doubles" style="display: none"><td colspan="3">
+                <td><input class="nameInput" type="text" name="fname" placeholder="Player 3" id="name3"></td>
+            </tr>
             <tr style="height: 50px; line-height: 50px">
                 <td style="width: 40%; font-size: 52px; text-align: right" id="rounds1">0</td>
                 <td style="width: 20%; font-size: 52px; line-height: 45px; vertical-align: top">-</td>
                 <td style="width: 40%; font-size: 52px; text-align: left" id="rounds2">0</td>
             </tr>
-            <tr><td colspan="3"><input class="nameInput" type="text" name="fname" placeholder="Player 2" id="name2"></td></tr>
-            <tr class="doubles" style="display: none"><td colspan="3"><input class="nameInput" type="text" name="fname" placeholder="Player 4" id="name4"></td></tr>
+            <tr>
+                <td colspan="3"><input class="nameInput" type="text" name="fname" placeholder="Player 2" id="name2"></td>
+            </tr>
+            <tr class="doubles" style="display: none">
+                <td colspan="3"><input class="nameInput" type="text" name="fname" placeholder="Player 4" id="name4"></td>
+            </tr>
         </table>
-        <!-- <div class="button-bar" style="margin-bottom: 20px">
-            <a class="button button-positive" ng-click="threeRounds()">3 Rounds</a>
-            <a class="button button-positive" ng-click="fiveRounds()">5 Rounds</a>
-        </div> -->
-
-        <!-- <table class="roundScores">
-            <tr>
-                <td colspan="2"><input type="number" name="score" placeholder="0" ng-model="scores.score11" ng-change="score1Change()"></td>
-                <td class="middle">
-                    1
-                </td>
-                <td colspan="2"><input type="number" name="score" placeholder="0" ng-model="scores.score12" ng-change="score1Change()"></td>
-            </tr>
-            <tr>
-                <td>
-                    <button id="1a1" class="button button-positive lesspad">
-                            +1
-                        </button>
-                    </td>
-                    <td>
-                        <button id="1a5"class="button button-positive lesspad">
-                            +5
-                        </button>
-                    </td>
-                    <td></td>
-                    <td>
-                        <button id="1b1" class="button button-positive lesspad">
-                            +1
-                        </button>
-                    </td>
-                    <td>
-                        <button id="1b5" class="button button-positive lesspad">
-                            +5
-                        </button>
-                    </td>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2"><input type="number" name="score" placeholder="0" ng-model="scores.score21" ng-change="score2Change()"></td>
-                <td class="middle">
-                    2
-                </td>
-                <td colspan="2"><input type="number" name="score" placeholder="0" ng-model="scores.score22" ng-change="score2Change()"></td>
-            </tr>
-            <tr>
-
-                    <td>
-                        <button id="2a1" class="button button-positive lesspad">
-                            +1
-                        </button>
-                    </td>
-                    <td>
-                        <button id="2a5"class="button button-positive lesspad">
-                            +5
-                        </button>
-                    </td>
-                    <td></td>
-                    <td>
-                        <button id="2b1" class="button button-positive lesspad">
-                            +1
-                        </button>
-                    </td>
-                    <td>
-                        <button id="2b5" class="button button-positive lesspad">
-                            +5
-                        </button>
-                    </td>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2"><input type="number" name="score" placeholder="0" ng-model="scores.score31" ng-change="score3Change()"></td>
-                <td class="middle">
-                    3
-                </td>
-                <td colspan="2"><input type="number" name="score" placeholder="0" ng-model="scores.score32" ng-change="score3Change()"></td>
-            </tr>
-            <tr>
-
-                    <td>
-                        <button id="3a1" class="button button-positive lesspad">
-                            +1
-                        </button>
-                    </td>
-                    <td>
-                        <button id="3a5"class="button button-positive lesspad">
-                            +5
-                        </button>
-                    </td>
-                    <td></td>
-                    <td>
-                        <button id="3b1" class="button button-positive lesspad">
-                            +1
-                        </button>
-                    </td>
-                    <td>
-                        <button id="3b5" class="button button-positive lesspad">
-                            +5
-                        </button>
-                    </td>
-                </td>
-            </tr>
-            <tr class="moreRounds">
-                <td colspan="2"><input type="number" name="score" placeholder="0" ng-model="scores.score41" ng-change="score4Change()"></td>
-                <td class="middle">
-                    4
-                </td>
-                <td colspan="2"><input type="number" name="score" placeholder="0" ng-model="scores.score42" ng-change="score4Change()"></td>
-            </tr>
-            <tr>
-
-                    <td>
-                        <button id="4a1" class="button button-positive lesspad">
-                            +1
-                        </button>
-                    </td>
-                    <td>
-                        <button id="4a5"class="button button-positive lesspad">
-                            +5
-                        </button>
-                    </td>
-                    <td></td>
-                    <td>
-                        <button id="4b1" class="button button-positive lesspad">
-                            +1
-                        </button>
-                    </td>
-                    <td>
-                        <button id="4b5" class="button button-positive lesspad">
-                            +5
-                        </button>
-                    </td>
-                </td>
-            </tr>
-            <tr class="moreRounds">
-                <td colspan="2"><input type="number" name="score" placeholder="0" ng-model="scores.score51" ng-change="score5Change()"></td>
-                <td class="middle">
-                    5
-                </td>
-                <td colspan="2"><input type="number" name="score" placeholder="0" ng-model="scores.score52" ng-change="score5Change()"></td>
-            </tr>
-            <tr>
-
-                    <td>
-                        <button id="5a1" class="button button-positive lesspad">
-                            +1
-                        </button>
-                    </td>
-                    <td>
-                        <button id="5a5"class="button button-positive lesspad">
-                            +5
-                        </button>
-                    </td>
-                    <td></td>
-                    <td>
-                        <button id="5b1" class="button button-positive lesspad">
-                            +1
-                        </button>
-                    </td>
-                    <td>
-                        <button id="5b5" class="button button-positive lesspad">
-                            +5
-                        </button>
-                    </td>
-                </td>
-            </tr>
-        </table> -->
 
         <div class="row even">
-            <input id="1a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
+            <input id="1a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;">
             <div class="col d col-33 top" style="margin-top: -8px">Game</div>
-            <input id="1b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
+            <input id="1b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;">
         </div>
         <div class="row even">
             <div ng-click="scoreBtnCallback('1a', -1)" class="col d col-20 blue">-1</div>
@@ -201,9 +38,9 @@
         </div>
         <div class="row even empty"></div>
         <div class="row even">
-            <input id="2a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
+            <input id="2a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;">
             <div class="col d col-33 top" style="margin-top: -4px">Game</div>
-            <input id="2b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
+            <input id="2b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;">
 
         </div>
         <div class="row even">
@@ -215,9 +52,9 @@
         </div>
         <div class="row even empty"></div>
         <div class="row even">
-            <input id="3a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
+            <input id="3a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;">
             <div class="col d col-33 top" style="margin-top: -4px">Game</div>
-            <input id="1b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
+            <input id="1b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;">
         </div>
         <div class="row even">
             <div ng-click="scoreBtnCallback('3a', -1)" class="col d col-20 blue">-1</div>
@@ -228,9 +65,9 @@
         </div>
         <div class="row even empty"></div>
         <div class="row even">
-            <input id="4a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
+            <input id="4a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;">
             <div class="col d col-33 top" style="margin-top: -4px">Game</div>
-            <input id="4b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
+            <input id="4b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;">
         </div>
         <div class="row even">
             <div ng-click="scoreBtnCallback('4a', -1)" class="col d col-20 blue">-1</div>
@@ -241,9 +78,9 @@
         </div>
         <div class="row even empty"></div>
         <div class="row even">
-            <input id="5a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
+            <input id="5a" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;">
             <div class="col d col-33 top" style="margin-top: -4px">Game</div>
-            <input id="5b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;"></input>
+            <input id="5b" type="text" value="0" class="col-33" style="border: 1px solid grey; text-align: center;">
         </div>
         <div class="row even">
             <div ng-click="scoreBtnCallback('5a', -1)" class="col d col-20 blue">-1</div>
@@ -254,14 +91,14 @@
         </div>
         <div class="row even empty"></div>
 
-
         <label class="item item-input" style="margin: 20px 0px">
             <span class="input-label">Date</span>
             <input type="datetime-local" id="dateInput">
         </label>
+
         <div style="text-align: center">
             <button ng-click="submitScores()" class="button button-positive" id="submitbutton">Submit</button>
-            <!-- <button ng-click="showAlert()" class="button button-positive" id="submitbutton">Submit</button> -->
         </div>
+        
     </ion-content>
 </ion-view>
