--- a/www/templates/rankings.html
+++ b/www/templates/rankings.html
@@ -1,6 +1,6 @@
 <ion-view title="Rankings">
 <ion-nav-buttons side="right">
-  <button class="button" ng-click="toggleFilters()">Filters1</button>
+  <button class="button" ng-click="toggleFilters()">Filters</button>
 </ion-nav-buttons>
     <ion-content overflow-scroll="true" padding="true" class="has-header">
     <div id="tab-rankingCounty">
